tests/baselines/reference/importAssertion5.errors.txt
importAssertion5.ts(1,20): error TS2792: Cannot find module './first'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
importAssertion5.ts(2,1): error TS1005: '}' expected.


==== importAssertion5.ts (2 errors) ====
    import * as f from "./first" assert {
                       ~~~~~~~~~
!!! error TS2792: Cannot find module './first'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    
    
!!! error TS1005: '}' expected.
!!! related TS1007 importAssertion5.ts:1:37: The parser expected to find a '}' to match the '{' token here.